syntax = "proto3";
package chunkserverpb;

option go_package = ".;chunkserverpb";


service Put {
    rpc PutObject(stream PutRequest) returns (PutResponse) {}
}

message Target {
    string destAddr = 1;
    string destDir = 2;
}

message PutRequest {
    oneof data{
        ObjectInfo info = 1;
        bytes content = 2;
    }
}

message ObjectInfo {
    repeated Target targets = 1;
    string name = 2;
    string hash = 3;
}

message PutResponse {
    string Message = 1;
    int32 Code = 2;
}
